frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/connection-proxy-header: keep-alive
    nginx.ingress.kubernetes.io/proxy-body-size: 15m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: frontend.gke.zinclabs.dev
  namespace: hotcommerce
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.gke.zinclabs.dev
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
  tls:
  - hosts:
    - frontend.gke.zinclabs.dev
    secretName: frontend.gke.zinclabs.dev
